project_fl-a/test/parser/bad/a_bad_if.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

if True:

print("Ok")